--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
     <div>
         <h1>About me</h1>
-        <p>Iam a passionate web developer with experience in CSS,HTML and javascript.
-            I love creating responsive and user friendly wesites</p>
+        <p>Iam a passionate web developer with experience in CSS,HTML and javascript.</p>
+            <p>I love creating responsive and user friendly wesites</p>
     </div>
 
     <div>
         <h1>Projects</h1>
-        <p>Here are some of my projects</p>
+        <p>Here are some of my project</p>
         <ul>
             <a href=""><li>project 1</li></a>
             <a href=""><li>project 2</li></a>
