--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>I love creating responsive and user friendly wesites</p>
     </div>
 
-    <div>
+    <div class="project">
         <h1>Projects</h1>
         <p>Here are some of my project</p>
         <ul>
@@ -47,6 +47,6 @@
         <p>phone:123-456-789</p>
     </div>
 
-    <footer>ALFRED KILONZO 2024</footer>
+    <footer class="footer">ALFRED KILONZO 2024</footer>
 </body>
 </html>
