--- a/index.html
+++ b/index.html
@@ -6,30 +6,62 @@
     <title>my portfolio</title>
     <link rel="stylesheet" href="style.css">
 
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
 </head>
 
 
-<body>
-    <header> 
+<body class="body">
+    <header class="head"> 
         <h1>Alfred Kilonzo</h1>
         <p>software engineer</p>
     </header>
 
-    <nav>
-        <ul> 
-            <li><a href="https://www.google.com/">home</a></li>
-            <li><a href="about.html">about</a></li>
-            <li><a href="">projects</a></li>
-            <li><a href="">contact</a></li>
-        </ul>
+   
     </nav>
-
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">projects</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
     <div>
         <h1>About me</h1>
         <p>Iam a passionate web developer with experience in CSS,HTML and javascript.</p>
             <p>I love creating responsive and user friendly wesites</p>
+            <p> I have worked for companies such as google and safaricom </p>
     </div>
+
 
     <div class="project">
         <h1>Projects</h1>
@@ -40,6 +72,27 @@
             <a href=""><li>project 3</li></a>
         </ul>
     </div>
+    
+    <img src="assets/images/proj.jpeg">
+
+    <div>
+
+        <h1>hobbies</h1>
+        <ul>
+            <li>basketball</li>
+            <li>coding</li>
+            <li>football</li>
+
+
+        </ul>
+
+
+
+
+    </div>
+
+     
+
 
     <div>
         <h1>contacts</h1>
