--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="https://www.google.com/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="about.html">about</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -97,7 +97,7 @@
     <div>
         <h1>contacts</h1>
         email:<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">alfred.kilonzo@moringaschool.com</a>
-        <p>phone:123-456-789</p>
+        <p>phone:<a href="">0109875432</a></p>
     </div>
 
     <footer class="footer">ALFRED KILONZO 2024</footer>
